load("//tools/base/bazel:maven.bzl", "maven_repository")

filegroup(
    name = "simpleApplication",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "deps",
    # keep sorted
    artifacts = [
        "@maven//:androidx.annotation.annotation_1.2.0-rc01",
        "@maven//:androidx.appcompat.appcompat_1.3.0",
        "@maven//:androidx.constraintlayout.constraintlayout_2.1.3",
        "@maven//:androidx.core.core-ktx_1.6.0",
        "@maven//:androidx.lifecycle.lifecycle-common_2.3.0-rc01",
        "@maven//:androidx.navigation.navigation-fragment-ktx_2.3.5",
        "@maven//:androidx.navigation.navigation-ui-ktx_2.3.5",
        "@maven//:androidx.savedstate.savedstate_1.1.0-rc01",
        "@maven//:androidx.test.espresso.espresso-core_3.2.0",
        "@maven//:androidx.test.ext.junit_1.1.2",
        "@maven//:com.android.support.appcompat-v7_28.0.0",
        "@maven//:com.android.support.constraint.constraint-layout_1.0.2",
        "@maven//:com.android.support.test.espresso.espresso-core_3.0.2",
        "@maven//:com.android.support.test.runner_1.0.2",
        "@maven//:com.google.android.material.material_1.4.0",
        "@maven//:com.google.auto.value.auto-value-annotations_1.6.2",
        "@maven//:com.google.auto.value.auto-value_1.6.2",
        "@maven//:com.google.code.findbugs.jsr305_1.3.9",
        "@maven//:com.google.guava.guava_19.0",
        "@maven//:com.sun.activation.javax.activation_1.2.0",
        "@maven//:commons-io.commons-io_2.4",
        "@maven//:commons-lang.commons-lang_2.4",
        "@maven//:org.codehaus.mojo.animal-sniffer-annotations_1.17",
        "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.4.31",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.4.32",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-script-runtime_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk7_1.4.32",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.4.31",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.6.21",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core_1.4.1",
        "@maven//:xmlpull.xmlpull_1.1.3.1",
    ],
    visibility = ["//visibility:public"],
)
